2006-10-03  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* VERSION: release 2.9.20

2006-10-02  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scm/define-grob-properties.scm (all-user-grob-properties):
	mention stencil as user settable.

2006-10-02  Joe Neeman  <joeneeman@gmail.com>

	* Documentation/user/page.itely (Page formatting): 
	document auto-first-page-number

	* lily/page-breaking.cc (find_chunks_and_breaks): 
	* lily/paper-score.cc (calc_breaking): Follow changes to the
	Constrained_breaking interface

	* lily/constrained-breaking.cc (calc_subproblem): run the main loop
	here backwards, as an optimisation
	(initialize): new function; move most of the code in resize () here
	(combine_demerits): cache ragged_right_
	(Constrained_breaking): constructor now takes the Paper_score

2006-10-02  Erik Sandberg  <mandolaerik@gmail.com>
	
	* lily/lexer.ll, lily/parser.yy: Add EXPECT_NO_MORE_ARGS token, to
	avoid parser lookahead for 0-ary functions.

	* lily/translator.cc: Extract event classes from
	IMPLEMENT_TRANSLATOR_LISTENER for documentation generation.

2006-10-02  Heikki Junes  <hjunes@gmail.com>

	* po/fi.po: Fix spaces, commas etc. in Finnish translation using
	KBabel fix tool.

2006-10-01  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* scm/layout-page-layout.scm (page-breaking-wrapper): new
	function. Call the page breaking function selected in the
	`page-breaking' \paper variable, then the post processing function
	chosen using the `page-post-process' \paper variable.
	(line-height): new function. Return the height of a system.
	(line-minimum-position-on-page): new function. Return the position
	of a system on page (using the previous line position), only
	considering between system padding.
	(stretchable-line?): new function. Says whether a line can be
	stretched (ie. is not a title nor a single staff system).
	(page-maximum-space-left): new function. Computes space left on a
	page, when all systems are separated by their padding.
